padding fixes and left alignment

--- a/startupCss/main.css
+++ b/startupCss/main.css
@@ -9,7 +9,6 @@ header {
 }
 
 main {
-  padding-top: 40px;
   flex: 1 calc(100vh - 110px);
   display: flex;
   flex-direction: column;
